# RottenPotatoes

./: CMakeLists.txt  IMPLEMENTACIONES.md  README.md  RESUMEN_FINAL.txt  benchmark.cpp  main.cpp
csvreader/: CsvReader.h  utlis.cpp
engine/: SearchEngine.cpp  SearchEngine.h
index/: NGramTrie.h
movie/: Movie.h
patterns/: IndexFactory.h  MovieDisplay.h  MovieObserver.h  Observer.h  QueryBuilder.h
